# cdc-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: aws-setup.md  deployment-and-verify.md  kafka-setup.md  rds-logical-replication.md
infra/: Dockerfile.connect  docker-compose.yml
infra/connectors/: postgres-source.json  s3-sink.json
infra/terraform/: ec2.tf  network.tf  outputs.tf  providers.tf  rds.tf  s3.tf  terraform.tfvars.example  variables.tf
scripts/: apply_migrations.py  diagnose.sh  run_cdc_pipeline.sh  run_phase1.sh
sql/: 001_create_cryptocurrencies.sql  002_setup_cdc.sql
src/cdc_pipeline/: cmc_client.py  config.py  db.py  main.py  models.py
